kubernetes/argo-cd/projects/aws/production-hm/s3-browser/environments/production/kubernetes-manifests/hm-s3-browser-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-s3-browser-deployment
  namespace: production-hm-s3-browser
  labels:
    app.kubernetes.io/name: s3-browser
    app.kubernetes.io/part-of: production-hm-s3-browser
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: s3-browser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s3-browser
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: s3-browser
          image: harbor.hongbomiao.com/docker-hub-proxy-cache/caddy:2.9.1-alpine
          securityContext:
            # runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - name: s3-browser
              protocol: TCP
              containerPort: 8080
          command: ["/bin/sh", "-c"]
          args:
            - |
              echo "{
                log {
                  output stdout
                }
                auto_https off
              }
              :8080 {
                encode zstd gzip
                root * /srv
                file_server browse
              }" > /etc/caddy/Caddyfile
              caddy run --config /etc/caddy/Caddyfile
          volumeMounts:
            - name: motor-data-volume
              mountPath: /srv/motor_data
            - name: battery-data-volume
              mountPath: /srv/battery_data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
      volumes:
        - name: motor-data-volume
          persistentVolumeClaim:
            claimName: motor-data-persistent-volume-claim
        - name: battery-data-volume
          persistentVolumeClaim:
            claimName: battery-data-persistent-volume-claim
