kubernetes/argo-cd/projects/aws/production-hm/s3-browser/environments/production/kubernetes-manifests/hm-s3-browser-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hm-s3-browser-service
  namespace: production-hm-s3-browser
  labels:
    app.kubernetes.io/name: s3-browser
    app.kubernetes.io/part-of: production-hm-s3-browser
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: s3-browser
  ports:
    - name: s3-browser
      protocol: TCP
      targetPort: s3-browser
      port: 8080
