kubernetes/argo-cd/projects/aws/production-hm/s3-browser/environments/production/kubernetes-manifests/hm-s3-browser-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-s3-browser-ingress
  namespace: production-hm-s3-browser
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: s3-browser.hongbomiao.com
  labels:
    app.kubernetes.io/name: s3-browser
    app.kubernetes.io/part-of: production-hm-s3-browser
spec:
  rules:
    - host: s3-browser.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-s3-browser-service
                port:
                  number: 8080
  tls:
    - hosts:
        - s3-browser.hongbomiao.com
      secretName: hm-s3-browser-certificate
